<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/appAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchMsg"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"

 />

    <EditText
        android:id="@+id/cityInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:inputType="textPersonName"
        android:hint="@string/searchHint1"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/searchRadius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:hint="@string/searchHint2"
        android:inputType="number"
        tools:ignore="TouchTargetSizeCheck" />



    <Button
        android:id="@+id/searchBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchBt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"/>




</RelativeLayout>